Removed ref to main.css

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <title>Mapping Africa</title>
     <link rel="stylesheet" href="http://openlayers.org/en/v3.17.1/css/ol.css" type="text/css">
     <link rel="stylesheet" href="src/ol3-layerswitcher.css" />
-    <link rel="stylesheet" type="text/css" href="main.css">
+    <!--<link rel="stylesheet" type="text/css" href="main.css">-->
     
     <script src="http://openlayers.org/en/v3.17.1/build/ol.js" type="text/javascript"></script>
     <script src="showkml_test.js" defer="defer" type="text/javascript"></script>
@@ -42,7 +42,7 @@
             <div style="width:80%; height:80%; float:left" id="map"></div>
         </div>
         <div style="width:100%; float:left">
-            <p>Note: This interface uses Javascript, OpenLayers 3, and jQuery. It connects to GeoServer and PostgreSQL servers (not available through Github Pages).</p>
+            <p>Note: This interface uses Javascript, OpenLayers 3, and jQuery. It connects to GeoServer and PostgreSQL servers (not available through GitHub Pages). For more information about the Mapping Africa project, click <a href="http://mappingafrica.princeton.edu/" target="_blank">here</a>.</p>
         </div>
     </body>
 </html>
