--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <head>
   <title>Mapping Africa</title>
     <link rel="stylesheet" href="http://openlayers.org/en/v3.17.1/css/ol.css" type="text/css">
-    <link rel="stylesheet" href="src/ol3-layerswitcher.css" />
+    <link rel="stylesheet" href="layerswitcher/ol3-layerswitcher.css" />
     <!--<link rel="stylesheet" type="text/css" href="main.css">-->
     
     <script src="http://openlayers.org/en/v3.17.1/build/ol.js" type="text/javascript"></script>
     <script src="showkml_test.js" defer="defer" type="text/javascript"></script>
-    <script src="src/ol3-layerswitcher.js" type="text/javascript"></script>
+    <script src="layerswitcher/ol3-layerswitcher.js" type="text/javascript"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://use.fontawesome.com/8d7b885f37.js"></script>
     </head>
