--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
     <body onload=init()>
         <div>
             <p><h2>Mapping Africa: Mapping Interface</h2></p>
+            <label>Zambia locations: </label>
+            <select id="location">
+                <option value="null">Choose a location</option>
+                <option value="01JUL13">01</option>
+                <option value="02DEC13">02</option>
+                <option value="02DEC14">03</option>
+                <option value="02MAY10">04</option>
+                <option value="03AUG13">05</option>
+                <option value="05AUG12">06</option>
+                <option value="06AUG09">07</option>
+                <option value="06SEP12">08</option>
+            </select> 
+            <button id="reset">RESET</button><br><br>
         </div>
         <div>
             <div style="width:19%; float:right; padding: 5px">
