Add square draw option

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
                     <option value="Polygon">Polygon</option>
                     <option value="Circle">Circle</option>
                     <option value="Rectangle">Rectangle</option>
+                    <option value="Square">Square</option>
                 </select> <br><br>
     
                 <button id="delete_one" class="button" title="DELETE SELECTED FIELD"><i class="fa fa-eraser fa-2x" aria-hidden="true"></i></button>
