--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
   <title>Mapping Africa</title>
     <link rel="stylesheet" href="http://openlayers.org/en/v3.17.1/css/ol.css" type="text/css">
     <link rel="stylesheet" href="layerswitcher/ol3-layerswitcher.css" />
-    <!--<link rel="stylesheet" type="text/css" href="main.css">-->
+    <link rel="stylesheet" type="text/css" href="main.css">
+    <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
     
     <script src="http://openlayers.org/en/v3.17.1/build/ol.js" type="text/javascript"></script>
     <script src="showkml_test.js" defer="defer" type="text/javascript"></script>
@@ -18,14 +19,14 @@
             <label>Zambia locations: </label>
             <select id="location">
                 <option value="null">Choose a location</option>
-                <option value="01JUL13">01</option>
-                <option value="02DEC13">02</option>
-                <option value="02DEC14">03</option>
-                <option value="02MAY10">04</option>
-                <option value="03AUG13">05</option>
-                <option value="05AUG12">06</option>
-                <option value="06AUG09">07</option>
-                <option value="06SEP12">08</option>
+                <option value="KML_01JUL13.kml">01</option>
+                <option value="KML_02DEC13.kml">02</option>
+                <option value="KML_02DEC14.kml">03</option>
+                <option value="KML_02MAY10.kml">04</option>
+                <option value="KML_03AUG13.kml">05</option>
+                <option value="KML_05AUG12.kml">06</option>
+                <option value="KML_06AUG09.kml">07</option>
+                <option value="KML_06SEP12.kml">08</option>
             </select> 
             <button id="reset">RESET</button><br><br>
         </div>
@@ -56,7 +57,7 @@
             <div style="width:80%; height:80%; float:left" id="map"></div>
         </div>
         <div style="width:100%; float:left">
-            <p>Note: This interface uses Javascript, OpenLayers 3, and jQuery. It connects to GeoServer and PostgreSQL servers (not available through GitHub Pages). For more information about the Mapping Africa project, click <a href="http://mappingafrica.princeton.edu/" target="_blank">here</a>.</p>
+            <!--<p>Note: This interface uses Javascript, OpenLayers 3, and jQuery. It connects to GeoServer and PostgreSQL servers (not available through GitHub Pages). For more information about the Mapping Africa project, click <a href="http://mappingafrica.princeton.edu/" target="_blank">here</a>.</p>-->
         </div>
     </body>
 </html>
