Added note at bottom

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
             <div style="width:80%; height:80%; float:left" id="map"></div>
         </div>
         <div style="width:100%; float:left">
-            <!--<p>Note: This interface uses Javascript, OpenLayers 3, and jQuery. It connects to GeoServer and PostgreSQL servers (not available through GitHub Pages). For more information about the Mapping Africa project, click <a href="http://mappingafrica.princeton.edu/" target="_blank">here</a>.</p>-->
+            <p>Note: This interface, built with JavaScript, OpenLayers 3, and jQuery, is a demonstration of the tools only. The layer switcher satellite imagery is obtained by connecting to GeoServer and PostgreSQL servers (not available through GitHub Pages). For more information about the Mapping Africa project, click <a href="http://mappingafrica.princeton.edu/" target="_blank">here</a>.</p>
         </div>
     </body>
 </html>
