Fix mouse/tooltip mismatch

--- a/index.html
+++ b/index.html
@@ -51,10 +51,11 @@
                 </ul>
             </div>
             <div id="column-right">
-                <p><h5>Press the SHIFT key to toggle the between the DRAW and DELETE tool. Press the 's' key to use your mouse normally. Alternatively, you can also use the buttons in the sidebar.</h5></p> 
+                <p><h5><b><ins>INSTRUCTIONS</ins></b><br>Press the SHIFT key to toggle the between the DRAW and DELETE tool. Press the 's' key to use your mouse normally. Alternatively, you can also use the buttons in the sidebar.</h5></p>
+                <p><h5><b>DRAW TOOL:</b> Choose geometry type for mapping.<br><b>DELETE TOOL:</b> First, single click to select the field you want to delete. To delete, press 'd' or click on the eraser icon below.</h5></p>
                 
                 <p id="text"><h5></h5></p>
-                <textarea id="data" rows="15" style="width:100%">Field geometries will appear here after saving.</textarea>
+                <textarea id="data" rows="10" style="width:100%">Field geometries will appear here after saving.</textarea>
                 <!--Note for GH-pages-->
                 <p><h6><b>Note:</b> This interface, built with JavaScript, OpenLayers 3, and jQuery, is a demonstration of the tools only. The layer switcher for satellite imagery is obtained by connecting to GeoServer and PostgreSQL servers (not available through GitHub Pages). For more information about the Mapping Africa project, click <a href="http://mappingafrica.princeton.edu/" target="_blank">here</a>.</h6></p>
             </div>
